--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,12 @@
   
 </head>
 <body>
-  <app-root>Loading...</app-root>
+    <app-root>
+        <div class="splash-screen">
+            <div class="splash-loader">
+                <img src="assets/layout/images/logo-loading.png">
+            </div>
+        </div>
+    </app-root>
 </body>
 </html>
