--- a/src/assets/pages/landing.html
+++ b/src/assets/pages/landing.html
@@ -45,7 +45,7 @@
                         <img src="../layout/images/logo-text.svg"/>
                         
                         <a id="menu-button" href="#">
-                           <span class="fa fa-bars"></span>
+                           <span class="material-icons">menu</span>
                         </a>
                         
                         <ul id="menu" class="animated">
