--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
   <!-- Layout CSS -->
-  <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/theme-blue-grey.css">
-  <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/layout-blue-grey.css">
+  <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/theme-blue.css">
+  <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/layout-blue.css">
   
 </head>
 <body>
