--- a/src/assets/pages/landing.html
+++ b/src/assets/pages/landing.html
@@ -241,9 +241,9 @@
                        <div>PrimeNG Barcelona</div>
                    </div>
                    <div class="footer-right">
-                       <a href="#"><i class="material-icons">done</i></a>
-                       <a href="#"><i class="material-icons">done</i></a>
-                       <a href="#"><i class="material-icons">done</i></a>
+                       <a href="#"><i class="material-icons">search</i></a>
+                       <a href="#"><i class="material-icons">settings</i></a>
+                       <a href="#"><i class="material-icons">verified_user</i></a>
                    </div>
                </div>
            </div>
